Reintroduce ZGenerational flag