@@ -25,10 +25,10 @@ package gc.x;
 
 /*
  * @test TestNoUncommit
- * @requires vm.gc.Z  & (vm.opt.ZLegacyMode == null | vm.opt.ZLegacyMode) & !vm.graal.enabled
+ * @requires vm.gc.Z  & (vm.opt.ZGenerational == null | !vm.opt.ZGenerational) & !vm.graal.enabled
  * @summary Test ZGC uncommit unused memory disabled
- * @run main/othervm -XX:+UseZGC -XX:+ZLegacyMode -Xlog:gc*,gc+heap=debug,gc+stats=off -Xms512M -Xmx512M -XX:ZUncommitDelay=1 gc.x.TestNoUncommit
- * @run main/othervm -XX:+UseZGC -XX:+ZLegacyMode -Xlog:gc*,gc+heap=debug,gc+stats=off -Xms128M -Xmx512M -XX:ZUncommitDelay=1 -XX:-ZUncommit gc.x.TestNoUncommit
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational -Xlog:gc*,gc+heap=debug,gc+stats=off -Xms512M -Xmx512M -XX:ZUncommitDelay=1 gc.x.TestNoUncommit
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational -Xlog:gc*,gc+heap=debug,gc+stats=off -Xms128M -Xmx512M -XX:ZUncommitDelay=1 -XX:-ZUncommit gc.x.TestNoUncommit
  */
 
 public class TestNoUncommit {
