@@ -25,7 +25,7 @@ package gc.x;
 
 /*
  * @test TestSmallHeap
- * @requires vm.gc.Z & (vm.opt.ZLegacyMode == null | vm.opt.ZLegacyMode)
+ * @requires vm.gc.Z & (vm.opt.ZGenerational == null | !vm.opt.ZGenerational)
  * @summary Test ZGC with small heaps
  * @library / /test/lib
  * @run driver gc.x.TestSmallHeap 8M 16M 32M 64M 128M 256M 512M 1024M
@@ -55,7 +55,7 @@ public class TestSmallHeap {
         for (var maxCapacity: args) {
             ProcessTools.executeProcess(ProcessTools.createJavaProcessBuilder(
                                         "-XX:+UseZGC",
-                                        "-XX:+ZLegacyMode",
+                                        "-XX:-ZGenerational",
                                         "-Xlog:gc,gc+init,gc+reloc,gc+heap",
                                         "-Xmx" + maxCapacity,
                                         Test.class.getName()))
